<resources>
    <string name="app_name">TicTacToe</string>
    <string name="board_3x3_AI">Player vs CPU [3 x 3]</string>
    <string name="board_4x4_AI">Player vs CPU [4 x 4]</string>
    <string name="board_5x5_AI">Player vs CPU [5 x 5]</string>
    <string name="board_3x3_two_players">Player vs Player [3 x 3]</string>
    <string name="board_4x4_two_players">Player vs Player [4 x 4]</string>
    <string name="board_5x5_two_players">Player vs Player [5 x 5]</string>
    <string name="help_activity">Help</string>
    <string name="title_how_to_play">How To Play</string>
    <string name="title_mup_name">Osaro Iyoha</string>
    <string name="subtitle_mup">Learning his trade in the ALC community</string>
    <string name="mainActivityTitle">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="help_">Help</string>
    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="credits_title">Credits</string>
    <string name="cred_appicons">Tic Tac Toe app icon designed by Freepik from www.flaticon.com</string>
    <string name="cred_bg1">Grey square pattern background by davidzydd from www.freepik.com</string>
    <string name="cred_bg2">Bright background with dots by Creative_hat from www.freepik.com</string>
    <string name="cred_sound">All sound effects in this app were gotten from www.zapsplat.com </string>
    <string name="cross">X</string>
    <string name="naught">O</string>
    <string name="start">Start</string>
    <string name="reset">Clear Board</string>
    <string name="resetbod">Reset Scores</string>
    <string name="winnable">Winnable</string>
    <string name="sound">Sound</string>
    <string name="badass_AI">Play against difficult AI</string>
    <string name="player_0">Player : 0</string>
    <string name="ai_0">AI : 0</string>
    <string name="vs">Vs</string>
    <string name="player1choice"> [ Player 1 ] Choose X or O, then press START below or in options menu: </string>
    <string name="player2isx">Player 2 is X</string>
    <string name="player2iso">Player 2 is O</string>
    <string name="player1wins">Player 1 wins</string>
    <string name="player2wins">Player 2 wins</string>
    <string name="draw">It\'s a draw</string>
    <string name="p1Turn">Player1\'s Turn</string>
    <string name="playerVplayer">Player Vs Player</string>
    <string name="p2Turn">Player2\'s Turn</string>
    <string name="playerVcpu">Player Vs CPU</string>
    <string name="alc">ALC Take a Climb Challenge</string>
    <string name="ttt_title">Tic Tac Toe</string>

    <string name="header_about">About</string>

    <string name="lorem">
		This Tic Tac Toe app is a project created to test my Knowledge of Android after rounding-up
        all Udacity\'s beginner courses on android in the ALC 2.0 android beginner program.
        Shout-out to my android learning accountabilibuddies Essien, Kenneth(Kenzie), Wisdom and my ALC family. You
        guys are awesome! You can reach out to me via the buttons below.
	</string>

    <string name="help">
        1. Player vs CPU [3 x 3] board:
            Choose either the X or O radio button and press Begin. Play Against the ai and win by having X or O in three places - horizontally, diagonally or
            vertically. If it gets too easy, click on the "Play against difficult AI" at the bottom of the screen
            to play on the highest difficulty
    </string>
    <string name="help_2">
        2. Player vs CPU [5 x 5] board:
            Choose either the X or O radio button and press Begin.
            Play Against the ai and win by having X or O in five places - horizontally, diagonally or
            vertically. If it gets too easy, click on the "Play against difficult AI" at the bottom of the screen
            to play on the highest difficulty
    </string>

    <string name="help_3">
        3. Player vs Player mode [3 x 3] board:
            Same rules in the player vs CPU mode but player 1 chooses a character while player 2 automatically
            becomes the next character</string>
    <string name="help_4">
        4. Player vs Player mode [5 x 5] board:
                  Win another player by having X or O in five places at any point on the [5 x 5] board.
            Player 1 chooses a character while player 2 automatically
            becomes the next character.
            </string>
    <string name="help_5">
        5. Player vs Player mode [5 x 5] board (3 x 3 rules):
                   A special mode which the rules of the standard tic tac toe on a [3 x 3] is applied on a bigger
            [5 x 5] board. Win another player by having X or O in three places at any point on the [5 x 5] board.
            Player 1 chooses a character while player 2 automatically
            becomes the next character.
            </string>
    <string name="help_6">
        6. Player vs Player mode [4 x 4] board :
                   A special mode which the rules of the standard tic tac toe on a [3 x 3] is applied on a bigger
            [5 x 5] board. Win another player by having X or O in three places at any point on the [5 x 5] board.
            Player 1 chooses a character while player 2 automatically becomes the next character.
            </string>
    <string name="help_7">
        7. (COMING SOON) Player vs CPU mode [5 x 5] board (3 x 3 rules):
                   A special mode which the rules of the standard tic tac toe on a [3 x 3] is applied on a bigger
            [5 x 5] board. Win tha AI by having X or O in three places at any point on the [5 x 5] board.

    </string>

</resources>
