<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.droidgenesis.os_i.tictactoe.HelpActivity"
    android:background="@drawable/tttbg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/title_how_to_play"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="@color/colorPrimaryDark"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

                <TextView
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/help"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

                <TextView
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/help_2"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

                <TextView
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/help_3"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

                <TextView
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/help_4"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">
                <TextView
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/help_5"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">
                <TextView
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/help_6"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">
                <TextView
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/help_7"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
</ScrollView>
