<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tttbg"
    tools:context="com.droidgenesis.os_i.tictactoe.CreditsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/credits_title"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"/>
    <android.support.v7.widget.CardView
        android:id="@+id/credit_appicon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/cred_appicons"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/credit_background_graysquare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/cred_bg1"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/credit_background_bright_with_dots_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/cred_bg2"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/credit_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/cred_sound"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.v7.widget.CardView>

</LinearLayout>
