<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/boardbg"
    tools:actionBarNavMode="standard"
    tools:context=".Player_Vs_AI.Player_Vs_AI_3x3.PlayerVsAI_3x3_Activity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <android.support.v7.widget.CardView
                android:layout_margin="8dp"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#E0E0E0"
                app:cardCornerRadius="15dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp">

                    <TextView
                        android:id="@+id/txt_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aldrich"
                        android:padding="8dp"
                        android:text="@string/player_0"
                        android:textColor="#212121"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/vs"/>

                    <TextView
                        android:id="@+id/txt_ai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aldrich"
                        android:padding="8dp"
                        android:text="@string/ai_0"
                        android:textColor="#212121"
                        android:textSize="20sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <CheckBox
                android:layout_marginTop="12dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="casual"
                android:text="@string/sound"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:id="@+id/playerchoice"
             android:layout_marginTop="4dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@+id/radiogrp"
             android:text="@string/player1choice"
             android:fontFamily="@font/audiowide"
             android:textColor="@color/colorPrimaryDark"/>
        <RadioGroup
            android:id="@+id/radiogrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checkedButton="@+id/cross"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/cross" />

            <RadioButton
                android:id="@+id/naught"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:fontFamily="serif"
                android:text="@string/naught" />
        </RadioGroup>
     </LinearLayout>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:textSize="14sp"
            android:fontFamily="@font/audiowide"/>
        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <Button
                android:id="@+id/button1"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/button2"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/button3"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="50sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <Button
                android:id="@+id/button4"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="50sp"/>
            <Button
                android:padding="4dp"
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="50sp"/>
            <Button
                android:id="@+id/button6"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="50sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:textSize="50sp" />
        </LinearLayout>


        <CheckBox
            android:id="@+id/ai_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:text="@string/badass_AI"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/audiowide"
                android:text="@string/reset" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/audiowide"
                android:text="@string/start" />

            <Button
                android:id="@+id/reset_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/audiowide"
                android:text="@string/resetbod" />
        </LinearLayout>





</LinearLayout>
</ScrollView>
